tests/snapshots/docx/pandoc/lists.docx.snap
---
source: crates/docspec-docx-reader/tests/pandoc_corpus.rs
expression: snapshot
---
ReaderFixtureSnapshot {
  events: [
       0: StartDocument { id: None, language: None, metadata: None }
       1: StartParagraph { alignment: None, id: None }
       2: Text { content: "Some nested lists" }
       3: EndParagraph
       4: StartOrderedListItem { id: Some("2"), level: 0, start: Some(1), style_type: Decimal }
       5: StartParagraph { alignment: None, id: None }
       6: Text { content: "one" }
       7: EndParagraph
       8: EndOrderedListItem
       9: StartOrderedListItem { id: Some("2"), level: 0, start: None, style_type: Decimal }
      10: StartParagraph { alignment: None, id: None }
      11: Text { content: "two" }
      12: EndParagraph
      13: StartOrderedListItem { id: Some("3"), level: 1, start: Some(1), style_type: LowerAlpha }
      14: StartParagraph { alignment: None, id: None }
      15: Text { content: "a" }
      16: EndParagraph
      17: EndOrderedListItem
      18: StartOrderedListItem { id: Some("3"), level: 1, start: None, style_type: LowerAlpha }
      19: StartParagraph { alignment: None, id: None }
      20: Text { content: "b" }
      21: EndParagraph
      22: EndOrderedListItem
      23: EndOrderedListItem
      24: StartUnorderedListItem { id: Some("4"), level: 0, style_type: Disc }
      25: StartParagraph { alignment: None, id: None }
      26: Text { content: "one" }
      27: EndParagraph
      28: EndUnorderedListItem
      29: StartUnorderedListItem { id: Some("4"), level: 0, style_type: Disc }
      30: StartParagraph { alignment: None, id: None }
      31: Text { content: "two" }
      32: EndParagraph
      33: StartUnorderedListItem { id: Some("5"), level: 1, style_type: Disc }
      34: StartParagraph { alignment: None, id: None }
      35: Text { content: "three" }
      36: EndParagraph
      37: StartUnorderedListItem { id: Some("6"), level: 2, style_type: Disc }
      38: StartParagraph { alignment: None, id: None }
      39: Text { content: "four" }
      40: EndParagraph
      41: StartParagraph { alignment: None, id: None }
      42: Text { content: "Sub paragraph" }
      43: EndParagraph
      44: EndUnorderedListItem
      45: EndUnorderedListItem
      46: EndUnorderedListItem
      47: StartUnorderedListItem { id: Some("4"), level: 0, style_type: Disc }
      48: StartParagraph { alignment: None, id: None }
      49: Text { content: "Same list" }
      50: EndParagraph
      51: EndUnorderedListItem
      52: StartUnorderedListItem { id: Some("7"), level: 0, style_type: Disc }
      53: StartParagraph { alignment: None, id: None }
      54: Text { content: "Different list adjacent to the one above." }
      55: EndParagraph
      56: EndUnorderedListItem
      57: EndDocument
  ],
  terminal: Ok,
}
