tests/snapshots/docx/pandoc/lists_continuing.docx.snap
---
source: crates/docspec-docx-reader/tests/snapshots.rs
expression: from_reader_snapshot
---
ReaderFixtureSnapshot {
  events: [
    StartDocument { id: None, language: None, metadata: None },
    StartParagraph { alignment: Some(Left), id: None },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    StartParagraph { alignment: Some(Justify), id: None },
    EndParagraph,
    StartOrderedListItem { id: Some("1"), level: 0, start: Some(1), style_type: Decimal },
    StartParagraph { alignment: None, id: None },
    Text { content: "\t" },
    Text { content: "Foo" },
    EndParagraph,
    EndOrderedListItem,
    StartOrderedListItem { id: Some("1"), level: 0, start: None, style_type: Decimal },
    StartParagraph { alignment: None, id: None },
    Text { content: "\t" },
    Text { content: "Bar" },
    EndParagraph,
    EndOrderedListItem,
    StartOrderedListItem { id: Some("1"), level: 0, start: None, style_type: Decimal },
    StartParagraph { alignment: None, id: None },
    Text { content: "\t" },
    Text { content: "\t" },
    Text { content: "Baz" },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "\t" },
    Text { content: "\t" },
    EndParagraph,
    StartParagraph { alignment: Some(Justify), id: None },
    Text { content: "Interruption." },
    EndParagraph,
    EndOrderedListItem,
    StartOrderedListItem { id: Some("1"), level: 0, start: None, style_type: Decimal },
    StartParagraph { alignment: None, id: None },
    Text { content: "\t" },
    Text { content: "Bop" },
    EndParagraph,
    EndOrderedListItem,
    EndDocument,
  ],
  terminal: Ok,
}
