tests/snapshots/docx/pandoc/lists_level_override.docx.snap
---
source: crates/docspec-docx-reader/tests/snapshots.rs
expression: from_reader_snapshot
---
ReaderFixtureSnapshot {
  events: [
    StartDocument { id: None, language: None, metadata: None },
    StartParagraph { alignment: None, id: None },
    Text { content: "For each initiative below is outlined the goals, an approximate roadmap which will likely change as we iterate, signals/metrics to measure success, and initial workitems with a rough " },
    StartTextStyle { kind: Bold, id: None },
    Text { content: "schedule" },
    EndTextStyle,
    Text { content: " and contacts where available:" },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "\u{a0}" },
    EndParagraph,
    StartOrderedListItem { id: Some("1"), level: 0, start: Some(1), style_type: Decimal },
    StartParagraph { alignment: None, id: None },
    StartTextStyle { kind: TextColor(Rgb { b: 181, g: 117, r: 46 }), id: None },
    Text { content: "State of Documentation " },
    EndTextStyle,
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    StartTextStyle { kind: Bold, id: None },
    StartTextStyle { kind: TextColor(Rgb { b: 213, g: 155, r: 91 }), id: None },
    Text { content: "Goal:         Baseline and ongoing metrics tracking doc usefulness and completeness." },
    EndTextStyle,
    EndTextStyle,
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "\u{a0}" },
    EndParagraph,
    EndOrderedListItem,
    StartOrderedListItem { id: Some("2"), level: 0, start: Some(1), style_type: Decimal },
    StartParagraph { alignment: None, id: None },
    StartTextStyle { kind: TextColor(Rgb { b: 181, g: 117, r: 46 }), id: None },
    Text { content: "Content Migration " },
    EndTextStyle,
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "Goal: Content is accessible to new employees and is better organized/archived." },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "\u{a0}" },
    EndParagraph,
    EndOrderedListItem,
    StartOrderedListItem { id: Some("3"), level: 0, start: Some(1), style_type: Decimal },
    StartParagraph { alignment: None, id: None },
    StartTextStyle { kind: TextColor(Rgb { b: 181, g: 117, r: 46 }), id: None },
    Text { content: "Wiki (xl)" },
    EndTextStyle,
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    StartTextStyle { kind: Bold, id: None },
    StartTextStyle { kind: TextColor(Rgb { b: 213, g: 155, r: 91 }), id: None },
    Text { content: "Goal:         Useful documentation that is archived, searchable and easy to create" },
    EndTextStyle,
    EndTextStyle,
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "\u{a0}\u{a0}" },
    EndParagraph,
    EndOrderedListItem,
    StartOrderedListItem { id: Some("4"), level: 0, start: Some(1), style_type: Decimal },
    StartParagraph { alignment: None, id: None },
    StartTextStyle { kind: TextColor(Rgb { b: 181, g: 117, r: 46 }), id: None },
    Text { content: "XL Code Autoreview Bot (XLCRBot). " },
    EndTextStyle,
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    StartTextStyle { kind: Bold, id: None },
    StartTextStyle { kind: TextColor(Rgb { b: 213, g: 155, r: 91 }), id: None },
    Text { content: "Goal:         Feedback on basic violations in seconds or minutes at most in either VS or Codeflow." },
    EndTextStyle,
    EndTextStyle,
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    EndOrderedListItem,
    StartOrderedListItem { id: Some("5"), level: 0, start: Some(1), style_type: Decimal },
    StartParagraph { alignment: None, id: None },
    StartTextStyle { kind: TextColor(Rgb { b: 181, g: 117, r: 46 }), id: None },
    Text { content: "Code documentation" },
    EndTextStyle,
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    StartTextStyle { kind: Bold, id: None },
    StartTextStyle { kind: TextColor(Rgb { b: 213, g: 155, r: 91 }), id: None },
    Text { content: "Goal:        Useful, consistent, tool supported comments " },
    EndTextStyle,
    EndTextStyle,
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    StartTextStyle { kind: Bold, id: None },
    Text { content: "\u{a0}" },
    EndTextStyle,
    Text { content: "\u{a0}" },
    EndParagraph,
    EndOrderedListItem,
    StartOrderedListItem { id: Some("6"), level: 0, start: Some(1), style_type: Decimal },
    StartParagraph { alignment: None, id: None },
    StartTextStyle { kind: TextColor(Rgb { b: 181, g: 117, r: 46 }), id: None },
    Text { content: "Education efforts" },
    EndTextStyle,
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    StartTextStyle { kind: Bold, id: None },
    StartTextStyle { kind: TextColor(Rgb { b: 213, g: 155, r: 91 }), id: None },
    Text { content: "Goal:        Broad, discoverable channels for updates and news" },
    EndTextStyle,
    EndTextStyle,
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    StartTextStyle { kind: Bold, id: None },
    Text { content: "\u{a0}" },
    EndTextStyle,
    EndParagraph,
    EndOrderedListItem,
    EndDocument,
  ],
  terminal: Ok,
}
