tests/snapshots/docx/pandoc/lists_restarting.docx.snap
---
source: crates/docspec-docx-reader/tests/snapshots.rs
assertion_line: 56
expression: from_reader_snapshot
---
ReaderFixtureSnapshot {
  events: [
    StartDocument { id: None, language: None, metadata: None },
    StartOrderedListItem { id: Some("4"), level: 0, start: Some(1), style_type: Decimal },
    StartParagraph { alignment: Some(Justify), id: None },
    Text { content: "Foo" },
    EndParagraph,
    EndOrderedListItem,
    StartOrderedListItem { id: Some("4"), level: 0, start: None, style_type: Decimal },
    StartParagraph { alignment: Some(Justify), id: None },
    Text { content: "Bar" },
    EndParagraph,
    EndOrderedListItem,
    StartOrderedListItem { id: Some("4"), level: 0, start: None, style_type: Decimal },
    StartParagraph { alignment: Some(Justify), id: None },
    Text { content: "Baz" },
    EndParagraph,
    EndOrderedListItem,
    StartParagraph { alignment: Some(Justify), id: None },
    EndParagraph,
    StartParagraph { alignment: Some(Justify), id: None },
    Text { content: "Interruption" },
    EndParagraph,
    StartParagraph { alignment: Some(Justify), id: None },
    EndParagraph,
    StartOrderedListItem { id: Some("5"), level: 0, start: Some(1), style_type: Decimal },
    StartParagraph { alignment: Some(Justify), id: None },
    Text { content: "Bop." },
    EndParagraph,
    EndOrderedListItem,
    EndDocument,
  ],
  terminal: Ok,
}
