tests/snapshots/docx/pandoc/lists_sublist_reset.docx.snap
---
source: crates/docspec-docx-reader/tests/snapshots.rs
expression: from_reader_snapshot
---
ReaderFixtureSnapshot {
  events: [
    StartDocument { id: None, language: None, metadata: None },
    StartOrderedListItem { id: Some("1"), level: 0, start: Some(1), style_type: Decimal },
    StartParagraph { alignment: None, id: None },
    Text { content: "Head 1" },
    EndParagraph,
    StartOrderedListItem { id: Some("1"), level: 1, start: Some(1), style_type: Decimal },
    StartParagraph { alignment: None, id: None },
    Text { content: "Head 1.1" },
    EndParagraph,
    EndOrderedListItem,
    StartOrderedListItem { id: Some("1"), level: 1, start: None, style_type: Decimal },
    StartParagraph { alignment: None, id: None },
    Text { content: "Head 1.2" },
    EndParagraph,
    EndOrderedListItem,
    EndOrderedListItem,
    StartOrderedListItem { id: Some("1"), level: 0, start: None, style_type: Decimal },
    StartParagraph { alignment: None, id: None },
    Text { content: "Head 2" },
    EndParagraph,
    StartOrderedListItem { id: Some("1"), level: 1, start: Some(3), style_type: Decimal },
    StartParagraph { alignment: None, id: None },
    Text { content: "Head 2.1" },
    EndParagraph,
    EndOrderedListItem,
    EndOrderedListItem,
    EndDocument,
  ],
  terminal: Ok,
}
