tests/snapshots/docx/pandoc/mendeley_citations.docx.snap
---
source: crates/docspec-docx-reader/tests/snapshots.rs
expression: from_reader_snapshot
---
ReaderFixtureSnapshot {
  events: [
    StartDocument { id: None, language: None, metadata: None },
    StartParagraph { alignment: None, id: None },
    Text { content: "This is a Mendeley test " },
    Text { content: "(prefix Hadwen-Bennett et al., 2018, p. 123 suffix)" },
    Text { content: "." },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "Another test " },
    Text { content: "(prefix Seo, 2019, pp. 10–20 suffix)" },
    Text { content: "." },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "The last test " },
    Text { content: "(Koh & Abbas, 2015; Lee et al., 2011)" },
    Text { content: "." },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    StartHeading { id: None, level: 1 },
    Text { content: "References" },
    EndHeading,
    StartParagraph { alignment: None, id: None },
    Text { content: "Hadwen-Bennett, A., Sentance, S., & Morrison, C. (2018). Making Programming Accessible to Learners with Visual Impairments: A Literature Review. " },
    StartTextStyle { kind: Italic, id: None },
    Text { content: "International Journal of Computer Science Education in Schools" },
    EndTextStyle,
    Text { content: ", " },
    StartTextStyle { kind: Italic, id: None },
    Text { content: "2" },
    EndTextStyle,
    Text { content: "(2), 3–13. https://www.microsoft.com/en-us/research/publication/making-programming-accessible-to-learners-with-visual-impairments-a-literature-review/" },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "Koh, K., & Abbas, J. (2015). Future of library and museum services supporting teen learning: Perceptions of professionals in learning labs and makerspaces. " },
    StartTextStyle { kind: Italic, id: None },
    Text { content: "Journal of Research on Libraries \\& Young Adults" },
    EndTextStyle,
    Text { content: ", " },
    StartTextStyle { kind: Italic, id: None },
    Text { content: "6" },
    EndTextStyle,
    Text { content: "(4)." },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "Lee, I., Martin, F., Denner, J., Coulter, B., Allan, W., Erickson, J., Malyn-Smith, J., & Werner, L. (2011). Computational Thinking for Youth in Practice. " },
    StartTextStyle { kind: Italic, id: None },
    Text { content: "ACM Inroads" },
    EndTextStyle,
    Text { content: ", " },
    StartTextStyle { kind: Italic, id: None },
    Text { content: "2" },
    EndTextStyle,
    Text { content: "(1), 32–37. https://doi.org/10.1145/1929887.1929902" },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "Seo, J. (2019). Is the Maker Movement Inclusive of {ANYONE}?: Three Accessibility Considerations to Invite Blind Makers to the Making World. " },
    StartTextStyle { kind: Italic, id: None },
    Text { content: "TechTrends" },
    EndTextStyle,
    Text { content: ", " },
    StartTextStyle { kind: Italic, id: None },
    Text { content: "63" },
    EndTextStyle,
    Text { content: "(5), 514–520. https://doi.org/10.1007/s11528-019-00377-3" },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    EndDocument,
  ],
  terminal: Ok,
}
