tests/snapshots/docx/pandoc/metadata.docx.snap
---
source: crates/docspec-docx-reader/tests/snapshots.rs
expression: from_reader_snapshot
---
ReaderFixtureSnapshot {
  events: [
    StartDocument { id: None, language: None, metadata: None },
    StartHeading { id: None, level: 1 },
    Text { content: "This Is the Title" },
    EndHeading,
    StartParagraph { alignment: None, id: None },
    Text { content: "Mary Ann Evans" },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "Aurore" },
    Text { content: " " },
    Text { content: "Dupin" },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "July 28, 2014" },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "This is a test of how this all works. I’ve skipped lines here, which " },
    Text { content: "pandoc" },
    Text { content: " doesn’t do, but which shouldn’t make a difference." },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "And now this is normal text." },
    EndParagraph,
    EndDocument,
  ],
  terminal: Ok,
}
