tests/snapshots/docx/pandoc/nested_anchors_in_header.docx.snap
---
source: crates/docspec-docx-reader/tests/snapshots.rs
expression: from_reader_snapshot
---
ReaderFixtureSnapshot {
  events: [
    StartDocument { id: None, language: None, metadata: None },
    StartHeading { id: None, level: 1 },
    Text { content: "Оглавление" },
    EndHeading,
    StartParagraph { alignment: None, id: None },
    Text { content: "\t" },
    StartLink { href: "#_Toc459979384", id: None, title: None },
    Text { content: "Short instructions" },
    Text { content: "\t" },
    Text { content: "1" },
    EndLink,
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "\t" },
    StartLink { href: "#_Toc459979385", id: None, title: None },
    Text { content: "Some instructions" },
    Text { content: "\t" },
    Text { content: "1" },
    EndLink,
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "\t" },
    StartLink { href: "#_Toc459979386", id: None, title: None },
    Text { content: "Remote folder or longlonglonglonglong file with manymanymanymany letters inside opening" },
    Text { content: "\t" },
    Text { content: "2" },
    EndLink,
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "\t" },
    StartLink { href: "#_Toc459979387", id: None, title: None },
    Text { content: "Remote folder or longlonglonglonglong file with manymanymanymany letters inside closing" },
    Text { content: "\t" },
    Text { content: "2" },
    EndLink,
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    StartHeading { id: None, level: 1 },
    Text { content: "Short instructions" },
    EndHeading,
    StartParagraph { alignment: None, id: None },
    StartLink { href: "#_Remote_folder_opening", id: None, title: None },
    Text { content: "Open remote folder" },
    EndLink,
    Text { content: " " },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "Do staff" },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    StartLink { href: "#_Remote_folder_closing", id: None, title: None },
    Text { content: "Close remote folder" },
    EndLink,
    Text { content: " " },
    EndParagraph,
    StartHeading { id: None, level: 1 },
    Text { content: "Some instructions" },
    EndHeading,
    StartParagraph { alignment: None, id: None },
    Text { content: "Lines" },
    EndParagraph,
    StartHeading { id: None, level: 2 },
    Text { content: "Remote folder " },
    Text { content: "or " },
    Text { content: "longlonglonglonglong" },
    Text { content: " file with " },
    Text { content: "manymanymanymany" },
    Text { content: " letters inside " },
    Text { content: "opening" },
    EndHeading,
    StartParagraph { alignment: None, id: None },
    Text { content: "Open folder" },
    EndParagraph,
    StartHeading { id: None, level: 2 },
    Text { content: "Remote folder " },
    Text { content: "or " },
    Text { content: "longlonglonglonglong" },
    Text { content: " file with " },
    Text { content: "manymanymanymany" },
    Text { content: " letters inside " },
    Text { content: "closing" },
    EndHeading,
    StartParagraph { alignment: None, id: None },
    Text { content: "Close folder" },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    EndDocument,
  ],
  terminal: Ok,
}
