tests/snapshots/docx/pandoc/nested_smart_tags.docx.snap
---
source: crates/docspec-docx-reader/tests/snapshots.rs
expression: from_reader_snapshot
---
ReaderFixtureSnapshot {
  events: [
    StartDocument { id: None, language: None, metadata: None },
    StartHeading { id: None, level: 2 },
    Text { content: "159. And It Came to Pass " },
    Text { content: "in the Course of" },
    Text { content: " Those Many Days" },
    EndHeading,
    StartParagraph { alignment: None, id: None },
    Text { content: "I heard" },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "“And it came to pass " },
    Text { content: "in the course of" },
    Text { content: " those many days that the king of " },
    Text { content: "Egypt" },
    Text { content: " died; and the children of " },
    Text { content: "Israel" },
    Text { content: " sighed by reason of the bondage, and they cried, and their cry came up unto God by reason of the bondage. And God heard their groaning” (Exodus 2:23-4). This means that they suffered so much that they could not bear it any longer. And they so pleaded with prayer, that “their cry came up unto God.”" },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "But we can see that they were saying, “Would that we had… when we sat by the flesh-pots, when we did eat bread to the full.” And they also said, “We remember the fish, which we" },
    Text { content: " would" },
    Text { content: " eat in " },
    Text { content: "Egypt" },
    Text { content: " for naught; the cucumbers, and the melons, and the leeks, and the onions, and the garlic.”" },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "The thing is that" },
    Text { content: "," },
    Text { content: " indeed, they were very fond of the work in " },
    Text { content: "Egypt" },
    Text { content: ". This is the meaning of “But mingled themselves with the nations, and learned their works.” It means that if " },
    Text { content: "Israel" },
    Text { content: " are under the dominion of a certain nation, that nation controls them and they cannot retire from their dominion. Thus, they tasted sufficient flavor in that work and could not be redeemed." },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "So" },
    Text { content: " what did the Creator do? “The king of " },
    Text { content: "Egypt" },
    Text { content: " died,” meaning they had lost this servitude. " },
    Text { content: "Thus" },
    Text { content: " they could no longer work; they understood that if there is no perfection of the " },
    StartTextStyle { kind: Italic, id: None },
    Text { content: "Mochin" },
    EndTextStyle,
    Text { content: ", the servitude is also incomplete. Hence, “and the children of " },
    Text { content: "Israel" },
    Text { content: " sighed " },
    Text { content: "by reason of" },
    Text { content: " the bondage.” The work means that they did not suffice for the work, that they had no liveliness in the servitude." },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "This is the meaning of “the king of " },
    Text { content: "Egypt" },
    Text { content: " died,” that all the dominations of the king of " },
    Text { content: "Egypt" },
    Text { content: ", which he was providing for and nourishing, had died. " },
    Text { content: "This is why" },
    Text { content: " they had room for prayer. And they were immediately salvaged. And afterwards, when they walked in the desert and came to a state of " },
    StartTextStyle { kind: Italic, id: None },
    Text { content: "Katnut" },
    EndTextStyle,
    StartTextStyle { kind: Italic, id: None },
    Text { content: " " },
    EndTextStyle,
    Text { content: "(smallness)," },
    Text { content: " " },
    Text { content: "they craved the servitude that they had had prior to the death of the king of Egypt." },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    EndDocument,
  ],
  terminal: Ok,
}
